maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:23: error: ';' expected but ',' found.
  val x,y : Int,Int = trouveDonut()
               ^